embedded youtube video "jumping" fix (removed border)

--- a/src/app/components/tv-show-season-videos/tv-show-season-videos.component.scss
+++ b/src/app/components/tv-show-season-videos/tv-show-season-videos.component.scss
@@ -1,4 +1,5 @@
 .video {
+  border: 0;
   width: 60vw;
   height: 34vw;
   @media (max-width:960px) {
